[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'DooWeather'
version = '1.0'
authors = [
  { name='Michael Nikishov', email='doopath@gmail.com' },
]
description = 'Crossplatform weather app written in python'
readme = 'README.md'
requires-python = '>=3.9'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: GNU General Public License (GPL)',
    'Operating System :: OS Independent',
]

dependencies = [
    'python-weather',
    'Kivy==2.1.0',
    'kivymd==1.0.2'
]

# [tool.setuptools.packages.find]
# where = ['.']
# include = ['modules*', 'dooweather*']
# exclude = ['buildozer*', 'resources*']
# namespaces = false

[tool.setuptools]
packages = ['dooweather', 'dooweather.modules']

[tool.setuptools.package-data]
'*' = ['*.kv']

[project.scripts]
dooweather = 'dooweather.main:main'

[project.urls]
'Homepage' = 'https://github.com/doopath/dooweather'
